# spotmicro_champ

./: .gitignore  README.md  imu_test.py  imu_test_2.py  servo_test.py
devel/include/i2cpwm_board/: DriveMode.h  DriveModeRequest.h  DriveModeResponse.h  IntValue.h  IntValueRequest.h  IntValueResponse.h  Position.h  PositionArray.h  Servo.h  ServoArray.h  ServoConfig.h  ServoConfigArray.h  ServosConfig.h  ServosConfigRequest.h  ServosConfigResponse.h  StopServos.h  StopServosRequest.h  StopServosResponse.h
devel/include/spot_msgs/: BatteryState.h  BatteryStateArray.h  BehaviorFault.h  BehaviorFaultState.h  EStopState.h  EStopStateArray.h  Feedback.h  FootState.h  FootStateArray.h  Lease.h  LeaseArray.h  LeaseOwner.h  LeaseResource.h  Metrics.h  PowerState.h  SystemFault.h  SystemFaultState.h  WiFiState.h
devel/lib/champ_base/: message_relay_node  quadruped_controller_node  state_estimation_node
devel/lib/champ_gazebo/: contact_sensor
devel/lib/i2c_imu/: i2c_imu_node
devel/lib/i2cpwm_board/: i2cpwm_controller  i2cpwm_controller_test
devel/lib/pkgconfig/: anymal_c_simple_description.pc  champ.pc  champ_base.pc  champ_bringup.pc  champ_config.pc  champ_description.pc  champ_gazebo.pc  champ_msgs.pc  champ_navigation.pc  champ_teleop.pc  dkitty_description.pc  i2c_imu.pc  i2cpwm_board.pc  opendog_description.pc  servo_move_keyboard.pc  spot_description.pc  spot_driver.pc  spot_msgs.pc  spot_viz.pc  spotmicro_config.pc  spotmicro_description.pc  yocs_velocity_smoother.pc
src/i2c_pwm_board/: CMakeLists.txt  README.md
src/i2c_pwm_board/config/: servos_calibration.yaml
src/i2c_pwm_board/include/i2cpwm_board/: i2cpwm_lib.h
src/i2c_pwm_board/launch/: i2cpwm_node.launch
src/i2c_pwm_board/src/: i2cpwm_controller.cpp  i2cpwm_lib.cpp
src/i2c_pwm_board/test/: i2cpwm_controller.test  i2cpwm_controller_test.cpp
src/robots/configs/spotmicro_config/: CMakeLists.txt
src/robots/configs/spotmicro_config/config/imu/: RTIMULib.ini  madgwick_filter.yaml  mpu9250.yaml
src/robots/configs/spotmicro_config/launch/: bringup.launch  calibration.launch  position_controllers.launch
src/robots/configs/spotmicro_config/launch/include/: imu.launch
src/robots/configs/spotmicro_config/src/: imu.py  servo_interface.py
src/servo_move_keyboard/scripts/: servoMoveKeyboard.py
(+180 files in other folders)
